--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -174,7 +174,6 @@
   <string name="Delete_Share">是否删除分享</string>
   <string name="Detection_Pop">关闭后将不再推送侦测报警消息，确定关闭？</string>
   <string name="Device_Disconnected">对端断开</string>
-  <string name="Dont_Show_Again">不再提示</string>
   <string name="Download_Then_Share">请先下载视频再分享</string>
   <string name="Downloading">视频正在下载中</string>
   <string name="EDIT_IMAGE">图片编辑</string>
@@ -627,8 +626,6 @@
   <string name="Start_instructions_G">关注“加菲狗官微服务”公众号后，进入主页面，点击菜单栏的“服务”，选择“绑定账号”。</string>
   <string name="Start_instructions_H">绑定账号</string>
   <string name="Start_instructions_I">请输入加菲狗手机/邮箱账号进行绑定，如忘记密码请到加菲狗客户端找回</string>
-  <string name="Switch_Mode">拍摄内容请切换至直连模式查看</string>
-  <string name="Switch_Mode_Pop">当前网络拍摄内容请到设置切换至直连模式查看</string>
   <string name="Switch_Off">始终关闭</string>
   <string name="Switch_On">始终开启</string>
   <string name="TAKE_PHOTO">拍一张</string>
@@ -749,8 +746,6 @@
   <string name="Tap1_Camera_RecordingFailed">拍摄失败</string>
   <string name="Tap1_Camera_SetProtectionTips">设置安全防护</string>
   <string name="Tap1_Camera_SpaceUsage">空间使用情况(%1$s/%2$s)</string>
-  <string name="Tap1_Camera_TCPconnected">摄像机通过网络与客户端相连</string>
-  <string name="Tap1_Camera_UDPconnected">摄像机直接与客户端相连</string>
   <string name="Tap1_Camera_Video">视频</string>
   <string name="Tap1_Camera_VideoLive">直播</string>
   <string name="Tap1_Camera_Video_Auto">自动</string>
@@ -764,7 +759,6 @@
   <string name="Tap1_Camera_ViewAngle">视角</string>
   <string name="Tap1_CurrentVersion">当前版本</string>
   <string name="Tap1_DeleteDownloadingTips">文件正在下载中，是否删除？</string>
-  <string name="Tap1_DeletedCameraNCellphoneFileTips">将同步删除相机和手机内保存内容，确认删除？</string>
   <string name="Tap1_DeviceWasBindedTips">设备已被“%s”用户绑定，请解绑后重试</string>
   <string name="Tap1_Device_NoConnection">无网络连接 点击刷新</string>
   <string name="Tap1_Device_UpgradeTips">发现设备新固件，是否升级？</string>
@@ -776,9 +770,6 @@
   <string name="Tap1_DownloadFirmwareFai">固件下载失败</string>
   <string name="Tap1_DownloadFirmwareTips">即将下载设备固件，升级设备固件时需保持客户端与设备连接于同一网络</string>
   <string name="Tap1_FileDamagedTips">文件已损坏，是否删除？</string>
-  <string name="Tap1_File_Camera">相机</string>
-  <string name="Tap1_File_CameraNPhone">相机+手机相册</string>
-  <string name="Tap1_File_Phone">手机相册</string>
   <string name="Tap1_FirmwareDownloading">正在下载(%s)</string>
   <string name="Tap1_FirmwareUpdate">固件升级</string>
   <string name="Tap1_FirmwareUpdateFai">固件升级失败</string>
@@ -961,6 +952,7 @@
   <string name="Tips_Device_TimeoutRetry">连接超时，请重试</string>
   <string name="Tips_ShortVideo">长按录制短视频</string>
   <string name="Tips_SureDelete">是否删除？</string>
+  <string name="Treaty_url">http://www.jfgou.com/app/treaty%s_cn.html</string>
   <string name="UPDATE_DISCONNECT">设备无响应，请重试</string>
   <string name="UPDATE_FAIL">设备连接失败，请重试</string>
   <string name="UPDATING_BUTTON">正在更新</string>
@@ -997,7 +989,7 @@
   <string name="WIFI_HINT_LAGEL">注：WiFi版系列产品无3G指示灯</string>
   <string name="WIFI_HINT_LAGEL_0">WiFi灯</string>
   <string name="WIFI_HINT_LAGEL_1">3G/4G灯</string>
-  <string name="WIFI_HINT_LAGEL_2">Power灯</string>
+  <string name="WIFI_HINT_LAGEL_2">电源灯</string>
   <string name="WIFI_NAME">WiFi名称：</string>
   <string name="WIFI_OFF">请打开WiFi开关，再重试</string>
   <string name="WIFI_PWD">WiFi密码</string>
